--- a/jupyter_notebooks/01-DataCollection.ipynb
+++ b/jupyter_notebooks/01-DataCollection.ipynb
@@ -788,48 +788,6 @@
         "#### Next Steps: Data Cleaning\n",
         "\n"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ltNetd085qHf"
-      },
-      "source": [
-        "## Save the Dataset"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "Save the Dataset to output directory."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 50,
-      "metadata": {
-        "id": "aKlnIozA4eQO",
-        "outputId": "fd09bc1f-adb1-4511-f6ce-492a6af570c0"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[Errno 17] File exists: 'outputs/datasets/cleaned'\n"
-          ]
-        }
-      ],
-      "source": [
-        "import os\n",
-        "try:\n",
-        "  os.makedirs(name=\"outputs/datasets/cleaned\")\n",
-        "except Exception as e:\n",
-        "  print(e)\n",
-        "\n",
-        "df_prices.to_csv(\"outputs/datasets/cleaned/house_prices_records.csv\", index=False)"
-      ]
     }
   ],
   "metadata": {
@@ -840,7 +798,7 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "3.12.1",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
@@ -854,7 +812,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.1"
+      "version": "3.12.6"
     },
     "orig_nbformat": 2
   },
