--- a/jupyter_notebooks/01-DataCollection.ipynb
+++ b/jupyter_notebooks/01-DataCollection.ipynb
@@ -76,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "wZfF_j-Bz3i4",
         "outputId": "66943449-1436-4c3d-85c7-b85f9f78349b"
@@ -88,7 +88,7 @@
               "'/workspaces/milestone-project-heritage-housing-issues/jupyter_notebooks'"
             ]
           },
-          "execution_count": 1,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -112,7 +112,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "TwHsQRWjz3i9",
         "outputId": "86849db3-cd2f-4cc5-ebb8-2d0caafa1a2c"
@@ -142,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "vz3S-_kjz3jA",
         "outputId": "00b79ae4-75d0-4a96-d193-ac9ef9847ea2"
@@ -154,7 +154,7 @@
               "'/workspaces/milestone-project-heritage-housing-issues'"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -182,36 +182,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Collecting kaggle\n",
-            "  Downloading kaggle-1.7.4.5-py3-none-any.whl.metadata (16 kB)\n",
+            "Requirement already satisfied: kaggle in /home/cistudent/.local/lib/python3.12/site-packages (1.7.4.5)\n",
             "Requirement already satisfied: bleach in /home/cistudent/.pyenv/versions/3.12.1/lib/python3.12/site-packages (from kaggle) (6.2.0)\n",
             "Requirement already satisfied: certifi>=14.05.14 in /home/cistudent/.pyenv/versions/3.12.1/lib/python3.12/site-packages (from kaggle) (2024.12.14)\n",
             "Requirement already satisfied: charset-normalizer in /home/cistudent/.pyenv/versions/3.12.1/lib/python3.12/site-packages (from kaggle) (3.4.0)\n",
             "Requirement already satisfied: idna in /home/cistudent/.pyenv/versions/3.12.1/lib/python3.12/site-packages (from kaggle) (3.10)\n",
             "Requirement already satisfied: protobuf in /home/cistudent/.local/lib/python3.12/site-packages (from kaggle) (5.29.5)\n",
             "Requirement already satisfied: python-dateutil>=2.5.3 in /home/cistudent/.pyenv/versions/3.12.1/lib/python3.12/site-packages (from kaggle) (2.9.0.post0)\n",
-            "Collecting python-slugify (from kaggle)\n",
-            "  Downloading python_slugify-8.0.4-py2.py3-none-any.whl.metadata (8.5 kB)\n",
+            "Requirement already satisfied: python-slugify in /home/cistudent/.local/lib/python3.12/site-packages (from kaggle) (8.0.4)\n",
             "Requirement already satisfied: requests in /home/cistudent/.pyenv/versions/3.12.1/lib/python3.12/site-packages (from kaggle) (2.32.3)\n",
             "Requirement already satisfied: setuptools>=21.0.0 in /home/cistudent/.pyenv/versions/3.12.1/lib/python3.12/site-packages (from kaggle) (75.6.0)\n",
             "Requirement already satisfied: six>=1.10 in /home/cistudent/.pyenv/versions/3.12.1/lib/python3.12/site-packages (from kaggle) (1.17.0)\n",
-            "Collecting text-unidecode (from kaggle)\n",
-            "  Downloading text_unidecode-1.3-py2.py3-none-any.whl.metadata (2.4 kB)\n",
+            "Requirement already satisfied: text-unidecode in /home/cistudent/.local/lib/python3.12/site-packages (from kaggle) (1.3)\n",
             "Requirement already satisfied: tqdm in /home/cistudent/.local/lib/python3.12/site-packages (from kaggle) (4.67.1)\n",
             "Requirement already satisfied: urllib3>=1.15.1 in /home/cistudent/.pyenv/versions/3.12.1/lib/python3.12/site-packages (from kaggle) (2.2.3)\n",
             "Requirement already satisfied: webencodings in /home/cistudent/.pyenv/versions/3.12.1/lib/python3.12/site-packages (from kaggle) (0.5.1)\n",
-            "Downloading kaggle-1.7.4.5-py3-none-any.whl (181 kB)\n",
-            "Downloading python_slugify-8.0.4-py2.py3-none-any.whl (10 kB)\n",
-            "Downloading text_unidecode-1.3-py2.py3-none-any.whl (78 kB)\n",
-            "Installing collected packages: text-unidecode, python-slugify, kaggle\n",
-            "Successfully installed kaggle-1.7.4.5 python-slugify-8.0.4 text-unidecode-1.3\n",
             "\n",
             "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.2\u001b[0m\n",
             "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
@@ -233,9 +225,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "chmod: cannot access 'kaggle.json': No such file or directory\n"
+          ]
+        }
+      ],
       "source": [
         "import os\n",
         "os.environ['KAGGLE_CONFIG_DIR'] = os.getcwd()\n",
@@ -251,18 +251,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Dataset URL: https://www.kaggle.com/datasets/codeinstitute/housing-prices-data\n",
-            "License(s): unknown\n",
-            "Downloading housing-prices-data.zip to inputs/datasets/raw\n",
-            "  0%|                                               | 0.00/49.6k [00:00<?, ?B/s]\n",
-            "100%|███████████████████████████████████████| 49.6k/49.6k [00:00<00:00, 113MB/s]\n"
+            "Traceback (most recent call last):\n",
+            "  File \"/home/cistudent/.local/bin/kaggle\", line 8, in <module>\n",
+            "    sys.exit(main())\n",
+            "             ^^^^^^\n",
+            "  File \"/home/cistudent/.local/lib/python3.12/site-packages/kaggle/cli.py\", line 68, in main\n",
+            "    out = args.func(**command_args)\n",
+            "          ^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/home/cistudent/.local/lib/python3.12/site-packages/kaggle/api/kaggle_api_extended.py\", line 1741, in dataset_download_cli\n",
+            "    with self.build_kaggle_client() as kaggle:\n",
+            "         ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/home/cistudent/.local/lib/python3.12/site-packages/kaggle/api/kaggle_api_extended.py\", line 688, in build_kaggle_client\n",
+            "    username=self.config_values['username'],\n",
+            "             ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^\n",
+            "KeyError: 'username'\n"
           ]
         }
       ],
@@ -281,7 +290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -309,9 +318,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "mv: cannot stat 'inputs/datasets/raw/house-price-20211124T154130Z-001/house-price/*.csv': No such file or directory\n"
+          ]
+        }
+      ],
       "source": [
         "!mv inputs/datasets/raw/house-price-20211124T154130Z-001/house-price/*.csv inputs/datasets/raw/ \\\n",
         "  && rmdir inputs/datasets/raw/house-price-20211124T154130Z-001/house-price \\\n",
@@ -347,7 +364,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -552,7 +569,7 @@
               "[5 rows x 24 columns]"
             ]
           },
-          "execution_count": 36,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -576,7 +593,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -587,34 +604,34 @@
             "<class 'pandas.core.frame.DataFrame'>\n",
             "RangeIndex: 1460 entries, 0 to 1459\n",
             "Data columns (total 24 columns):\n",
-            " #   Column         Non-Null Count  Dtype   \n",
-            "---  ------         --------------  -----   \n",
-            " 0   1stFlrSF       1460 non-null   int64   \n",
-            " 1   2ndFlrSF       1374 non-null   float64 \n",
-            " 2   BedroomAbvGr   1361 non-null   float64 \n",
-            " 3   BsmtExposure   1422 non-null   category\n",
-            " 4   BsmtFinSF1     1460 non-null   int64   \n",
-            " 5   BsmtFinType1   1315 non-null   category\n",
-            " 6   BsmtUnfSF      1460 non-null   int64   \n",
-            " 7   EnclosedPorch  136 non-null    float64 \n",
-            " 8   GarageArea     1460 non-null   int64   \n",
-            " 9   GarageFinish   1225 non-null   category\n",
-            " 10  GarageYrBlt    1379 non-null   float64 \n",
-            " 11  GrLivArea      1460 non-null   int64   \n",
-            " 12  KitchenQual    1460 non-null   category\n",
-            " 13  LotArea        1460 non-null   int64   \n",
-            " 14  LotFrontage    1201 non-null   float64 \n",
-            " 15  MasVnrArea     1452 non-null   float64 \n",
-            " 16  OpenPorchSF    1460 non-null   int64   \n",
-            " 17  OverallCond    1460 non-null   int64   \n",
-            " 18  OverallQual    1460 non-null   int64   \n",
-            " 19  TotalBsmtSF    1460 non-null   int64   \n",
-            " 20  WoodDeckSF     155 non-null    float64 \n",
-            " 21  YearBuilt      1460 non-null   int64   \n",
-            " 22  YearRemodAdd   1460 non-null   int64   \n",
-            " 23  SalePrice      1460 non-null   int64   \n",
-            "dtypes: category(4), float64(7), int64(13)\n",
-            "memory usage: 234.7 KB\n"
+            " #   Column         Non-Null Count  Dtype  \n",
+            "---  ------         --------------  -----  \n",
+            " 0   1stFlrSF       1460 non-null   int64  \n",
+            " 1   2ndFlrSF       1374 non-null   float64\n",
+            " 2   BedroomAbvGr   1361 non-null   float64\n",
+            " 3   BsmtExposure   1422 non-null   object \n",
+            " 4   BsmtFinSF1     1460 non-null   int64  \n",
+            " 5   BsmtFinType1   1315 non-null   object \n",
+            " 6   BsmtUnfSF      1460 non-null   int64  \n",
+            " 7   EnclosedPorch  136 non-null    float64\n",
+            " 8   GarageArea     1460 non-null   int64  \n",
+            " 9   GarageFinish   1225 non-null   object \n",
+            " 10  GarageYrBlt    1379 non-null   float64\n",
+            " 11  GrLivArea      1460 non-null   int64  \n",
+            " 12  KitchenQual    1460 non-null   object \n",
+            " 13  LotArea        1460 non-null   int64  \n",
+            " 14  LotFrontage    1201 non-null   float64\n",
+            " 15  MasVnrArea     1452 non-null   float64\n",
+            " 16  OpenPorchSF    1460 non-null   int64  \n",
+            " 17  OverallCond    1460 non-null   int64  \n",
+            " 18  OverallQual    1460 non-null   int64  \n",
+            " 19  TotalBsmtSF    1460 non-null   int64  \n",
+            " 20  WoodDeckSF     155 non-null    float64\n",
+            " 21  YearBuilt      1460 non-null   int64  \n",
+            " 22  YearRemodAdd   1460 non-null   int64  \n",
+            " 23  SalePrice      1460 non-null   int64  \n",
+            "dtypes: float64(7), int64(13), object(4)\n",
+            "memory usage: 273.9+ KB\n"
           ]
         }
       ],
@@ -632,7 +649,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -650,7 +667,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -683,7 +700,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 40,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -702,7 +719,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -788,6 +805,44 @@
         "#### Next Steps: Data Cleaning\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Save dataset"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Save the dataset with converted categorical columns."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Folder created successfully!\n",
+            "File saved successfully!\n"
+          ]
+        }
+      ],
+      "source": [
+        "import os\n",
+        "try:\n",
+        "    os.makedirs(name='outputs/datasets/cleaned', exist_ok=True)\n",
+        "except Exception as e:\n",
+        "    print(e)\n",
+        "\n",
+        "df_prices.to_csv('outputs/datasets/cleaned/House_Prices_Cleaned.csv', index=False)"
+      ]
     }
   ],
   "metadata": {
@@ -798,7 +853,7 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": "3.12.1",
       "language": "python",
       "name": "python3"
     },
@@ -812,7 +867,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.6"
+      "version": "3.12.1"
     },
     "orig_nbformat": 2
   },
