Updated conclusions and fixed type-os for notebook 1 and 2. Started 03 - Correlation Analysis and Visualization.

--- a/jupyter_notebooks/02-DataCleaning.ipynb
+++ b/jupyter_notebooks/02-DataCleaning.ipynb
@@ -6,7 +6,7 @@
         "id": "0aStgWSO0E0E"
       },
       "source": [
-        "# **Data Exploration and Cleaning**"
+        "# **02 - Data Exploration and Cleaning**"
       ]
     },
     {
@@ -28,11 +28,7 @@
         "\n",
         "## Outputs\n",
         "\n",
-        "* An updated cleaned dataset saved as: `outputs/datasets/cleaned/house_prices_cleaned.csv`.\n",
-        "\n",
-        "## Additional Comments\n",
-        "\n",
-        "* \n"
+        "* An updated cleaned dataset saved as: `outputs/datasets/cleaned/house_prices_cleaned.csv`."
       ]
     },
     {
@@ -50,7 +46,7 @@
         "id": "cqP-UeN-z3i2"
       },
       "source": [
-        "# Change working directory"
+        "## Change working directory"
       ]
     },
     {
@@ -103,7 +99,7 @@
       "source": [
         "We want to make the parent of the current directory the new current directory\n",
         "* os.path.dirname() gets the parent directory\n",
-        "* os.chir() defines the new current directory"
+        "* os.chdir() defines the new current directory"
       ]
     },
     {
@@ -166,14 +162,14 @@
         "id": "-mavJ8DibrcQ"
       },
       "source": [
-        "# Section 1: Load data"
+        "## Section 1: Load data"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "We import the Pandas library to work with tabular data and load the dataset from `input/datasets/raw/house_prices_records.csv`. The `.shape` attribute provides the number of rows and columns, and `.head(5)` previews the first 5 rows to verify the data."
+        "We import the Pandas library to work with tabular data and load the dataset from `inputs/datasets/raw/house_prices_records.csv`. The `.shape` attribute provides the number of rows and columns, and `.head(5)` previews the first 5 rows to verify the data."
       ]
     },
     {
@@ -419,7 +415,7 @@
         "id": "uFQo3ycuO-v6"
       },
       "source": [
-        "# Section 2: Data Exploration"
+        "## Section 2: Data Exploration"
       ]
     },
     {
@@ -4950,21 +4946,21 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Section 3: Data Cleaning"
+        "## Section 3: Data Cleaning"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 1. Handling missing values\n",
+        "### 1. Handling missing values\n",
         "\n",
-        "Fill missing values and checkning no missing values remain:\n",
-        "* `LotFrontage`, `BedroomAbvGr`, `MsnVnrArea`: Filled missing value with the median to handle skewed distrubtion.\n",
+        "Fill missing values and checking no missing values remain:\n",
+        "* `LotFrontage`, `BedroomAbvGr`, `MsnVnrArea`: Filled missing value with the median to handle skewed distribution.\n",
         "*  `GarageFinish`: Filled missing values with 'None' to indicate no finished garage.\n",
         "*  `BsmtExposure`: Filled missing values with 'No' to indicate no basement exposure.\n",
         "*  `BsmtFinType1`: Filled missing values with 'Unf'  to indicate no finished basement.\n",
-        "*  `2anFlrDF`, `GarageYrBlt`: Filled missing values with '0' to indicate no second floor/garage."
+        "*  `2ndFlrSF`, `GarageYrBlt`: Filled missing values with '0' to indicate no second floor/garage."
       ]
     },
     {
@@ -5019,7 +5015,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 2. Optimizing data types\n",
+        "### 2. Optimizing data types\n",
         "Convert categorical columns to `category` for better optimization."
       ]
     },
@@ -5070,7 +5066,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 3. Dropping columns\n",
+        "### 3. Dropping columns\n",
         "Drop `EnclosedPorch` and `WoodDeckSF` since they have more than 80% missing values. "
       ]
     },
@@ -5094,8 +5090,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Section 4: Split data into train and test sets\n",
-        "\n",
+        "## Section 4: Split data into train and test sets"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "Create new directory for cleaned datasets and save the cleaned dataset."
       ]
     },
@@ -5305,8 +5306,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Section 5: Visulize Data Cleaning Effects\n",
-        "\n",
+        "## Section 5: Visualize Data Cleaning Effects"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "We are using the DataCleaningEffect function to visualize the impact of data cleaning on specific variables. This helps us:\n",
         "1. Verify the cleaning process: Ensure that missing values have been handled correctly and that the data cleaning hasn't introduced any unexpected changes.\n",
         "2. Compare original vs cleaned data: See how the distributions of variables have changed after cleaning.\n",
@@ -5315,7 +5321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -5415,10 +5421,10 @@
         "    \"\"\"\n",
         "    flag_count = 1\n",
         "\n",
-        "    # Identify categorical varibles\n",
+        "    # Identify categorical variables\n",
         "    categorical_variables = df_original.select_dtypes(exclude=['number']).columns\n",
         "\n",
-        "    # Loop though every variable in the list\n",
+        "    # Loop through every variable in the list\n",
         "    for var in variables_applied_with_method:\n",
         "        print(\"\\n=====================================================================================\")\n",
         "        print(f\"* Distribution Effect Analysis After Data Cleaning Method on variable: {var}\")\n",
@@ -5452,7 +5458,7 @@
         "        flag_count += 1\n",
         "\n",
         "\n",
-        "# Varianles to verify\n",
+        "# Variables to verify\n",
         "variables_to_verify = ['LotFrontage', 'BedroomAbvGr', 'GarageFinish', 'MasVnrArea']\n",
         "\n",
         "# Call function to verify cleaning process\n",
@@ -5474,27 +5480,29 @@
         "id": "ltNetd085qHf"
       },
       "source": [
-        "# Conclusion and next steps\n",
-        "\n",
-        "## Conclusion\n",
-        "we successfully completed the data cleaning process, ensuring that the dataset is ready for further analysis and modeling. Key steps included:\n",
-        "1. **Handling Missing Values**: Missing values were addressed using logical and data-driven methods, such as imputing with the median or filling with appropriate categorical values like 'None'.\n",
-        "2. **Optimizing Data Types**: Categorical columns were converted to the category data type to improve memory efficiency and performance.\n",
-        "1. **Dropping Irrelevant columns**: Columns with a high percentage of missing values or low relevance were removed to streamline the dataset.\n",
-        "2. **Splitting Data**: The dataset was split into TrainSet and TestSet to prepare for modeling, ensuring no missing values remain in either set.\n",
-        "5. **Verification**: Visualizations were used to verify the cleaning process, comparing original and cleaned data to ensure no unexpected changes were introduced.\n",
-        "\n",
-        "## Next steps: Correlation Study\n",
-        "* We are going to analyze relationships between variables and the target variable (`SalePrice`) to identify key predictors.\n",
-        "* We are going to use visualizations such as heatmaps, scatterplots, and boxplots to explore these relationships."
+        "## Conclusion and Next Steps"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Save file\n",
-        "Save train and test set to `outputs/datasets/cleaned` directory."
+        "### Conclusion\n",
+        "We successfully completed the data cleaning process, ensuring that the dataset is ready for further analysis and modeling. \n",
+        "Key steps included:\n",
+        "1. **Handling Missing Values**: Missing values were addressed using logical and data-driven methods, such as imputing with the median or filling with appropriate categorical values like 'None'.\n",
+        "2. **Optimizing Data Types**: Categorical columns were converted to the category data type to improve memory efficiency and performance.\n",
+        "1. **Dropping Irrelevant columns**: Columns with a high percentage of missing values or low relevance were removed to streamline the dataset.\n",
+        "2. **Splitting Data**: The dataset was split into TrainSet and TestSet to prepare for modeling, ensuring no missing values remain in either set.\n",
+        "5. **Verification**: Visualizations were used to verify the cleaning process, comparing original and cleaned data to ensure no unexpected changes were introduced.\n",
+        "\n",
+        "### Next steps: Correlation Study\n",
+        "1. **Formulate Hypotheses**: Create hypotheses based on selected attributes that are likely to influence the target variable (`SalePrice`).\n",
+        "2. **Analyze Relationship**: Analyze relationships between chosen attributes and `SalePrice` to identify key predictors that can be used in the predictive model.\n",
+        "3. **Visualize Insights**: Use visualizations such as heatmaps, scatterplots, and boxplots to explore and present these relationships in a clear and interpretable manner.\n",
+        "\n",
+        "## Save file\n",
+        "Save train and test set to `outputs/datasets/cleaned directory."
       ]
     },
     {
@@ -5519,7 +5527,7 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "3.12.1",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
@@ -5533,7 +5541,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.1"
+      "version": "3.12.6"
     },
     "orig_nbformat": 2
   },
