--- a/jupyter_notebooks/01-DataCollection.ipynb
+++ b/jupyter_notebooks/01-DataCollection.ipynb
@@ -54,7 +54,7 @@
         "id": "cqP-UeN-z3i2"
       },
       "source": [
-        "# Change working directory"
+        "## Change working directory"
       ]
     },
     {
@@ -107,7 +107,7 @@
       "source": [
         "We want to make the parent of the current directory the new current directory\n",
         "* os.path.dirname() gets the parent directory\n",
-        "* os.chir() defines the new current directory"
+        "* os.chdir() defines the new current directory"
       ]
     },
     {
@@ -170,7 +170,7 @@
         "id": "-mavJ8DibrcQ"
       },
       "source": [
-        "# Section 1: Data Retrieval"
+        "## Section 1: Data Retrieval"
       ]
     },
     {
@@ -219,8 +219,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "To configure the Kaggle API for data set retrieval, we first need to set the enviroment variable `KAGGLE_CONFIG_DIR` to the current directory where the `kaggle.json` file is stored. This file contains the necessary credentials for authentification. \n",
-        "We use the `chmod 600` to restrict the access to the `kaggle.json` file, ensuring that it is only readable and writeble by the owner."
+        "To configure the Kaggle API for data set retrieval, we first need to set the environment variable `KAGGLE_CONFIG_DIR` to the current directory where the `kaggle.json` file is stored. This file contains the necessary credentials for authentication. \n",
+        "We use the `chmod 600` to restrict the access to the `kaggle.json` file, ensuring that it is only readable and writable by the owner."
       ]
     },
     {
@@ -350,7 +350,7 @@
         "id": "uFQo3ycuO-v6"
       },
       "source": [
-        "# Section 2: Load and Inspect Kaggle Data"
+        "## Section 2: Load and Inspect Kaggle Data"
       ]
     },
     {
@@ -358,7 +358,7 @@
       "metadata": {},
       "source": [
         "* Import the Pandas library to work with tabular data.\n",
-        "* Load the datasets (`house_prices_records.csv`and `inherited_houses.csv`) into two separate Pandas DataFrames.\n",
+        "* Load the datasets (`house_prices_records.csv` and `inherited_houses.csv`) into two separate Pandas DataFrames.\n",
         "* Display the first few rows of `df_prices`."
       ]
     },
@@ -577,13 +577,30 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Conclusions and next step\n",
-        "### Concolusions:\n",
-        "The dataset consists of 1460 rows and 24 columns, with 9 variables containing missing values. Key columns with missing data include `LotFrontage` (17.7%), `GarageFinish` (16.1%), and others like `EnclosedPorch` and `WoodDeckSF`, which have a high percentage of missing values. Categorical columns need to be converted from `object` to `category`.\n",
+        "## Conclusions and Next Steps"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Conclusions\n",
+        "We successfully completed the data collection and initial exploration process, providing a clear understanding of the dataset's structure and potential challenges. Key findings include:\n",
+        "1. **Dataset Overview**: The dataset consists of 1460 rows and 24 columns, with 9 variables containing missing values.Key columns with missing data include:\n",
+        "    * `LotFrontage` (17.7%)\n",
+        "    * `GarageFinish` (16.1%)\n",
+        "    * Other columns like `EnclosedPorch` and `WoodDeckSF` have a high percentage of missing values and may need to be dropped.\n",
+        "2. **Variable Insights**: \n",
+        "    * `LotFrontage`: Shows a wide range of values, indicating variability that may require further exploration.\n",
+        "    * `GarageYrBlt`: Represents years and contains missing values, which may need special handling to ensure consistency.\n",
+        "3. **Initial Exploration**:\n",
+        "    * The `.info()` and `.describe()` methods provided a clear understanding of the dataset's structure, data types and statistical summaries. \n",
+        "    * This exploration highlighted potential challenges such as missing values and outliers, that will need to be addressed in the data cleaning phase.\n",
         "\n",
-        "The data also reveals that `LotFrontage` shows a wide range of values, indicating variability that may need further exploration. Additionally, `GarageYrBlt` contains missing values and represents years, which may require special handling to ensure consistency.\n",
-        "\n",
-        "### Next Steps: Data Cleaning\n",
+        "### Next steps: Data Cleaning\n",
+        "1. **Handle missing values**: Address missing values using appropriate methods, such as imputing with the median for numerical variables or filling with logical categorical values like `'None'`.\n",
+        "2. **Optimize Data Types**: Convert categorical columns from `object` to `category` to improve memory efficiency and performance.\n",
+        "3. **Drop Irrelevant Columns**: Remove columns with a high percentage of missing values or low relevance to streamline the dataset.\n",
         "\n"
       ]
     }
@@ -596,7 +613,7 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": "3.12.1",
+      "display_name": ".venv",
       "language": "python",
       "name": "python3"
     },
@@ -610,7 +627,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.1"
+      "version": "3.12.6"
     },
     "orig_nbformat": 2
   },
