--- a/jupyter_notebooks/03-CorrelationStudy.ipynb
+++ b/jupyter_notebooks/03-CorrelationStudy.ipynb
@@ -6,7 +6,7 @@
         "id": "0aStgWSO0E0E"
       },
       "source": [
-        "# **Correlation Analysis and Visualization**"
+        "# **03 - Correlation Analysis and Visualization**"
       ]
     },
     {
@@ -17,19 +17,25 @@
       "source": [
         "## Objectives\n",
         "\n",
-        "* Write your notebook objective here, for example, \"Fetch data from Kaggle and save as raw data\", or \"engineer features for modelling\"\n",
+        "* Analyze relationships between house attributes and the target variable `SalePrice`to identify key predictors for modeling.\n",
+        "* Validate hypotheses by performing correlation analysis and visualizing the results.\n",
+        "* Generate insights through visualization such as heatmaps, scatterplots and boxplots to demonstrate the strenght and direction of relationships.\n",
         "\n",
         "## Inputs\n",
         "\n",
-        "* Write here which data or information you need to run the notebook \n",
+        "* Cleaned dataset: `outputs/datasets/cleaned/house_prices_cleaned.csv`\n",
+        "* Hypotheses that can be found in [Hypotheses and Validation Process in README.md](LÄGG IN LÄNK!)\n",
         "\n",
         "## Outputs\n",
         "\n",
-        "* Write here which files, code or artefacts you generate by the end of the notebook \n",
+        "* Generate reusable code that answers **Business Requirement 1** by analyzing correlations and creating visualizations.\n",
+        "    * The code will aslo be used in the Streamlit app.\n",
+        "* Create and save data plots in `docs/plots` directory for use in Streamlit app.\n",
+        "* Identify and document the most relevant variables for the regression model based on the correlation analysis.\n",
         "\n",
         "## Additional Comments\n",
         "\n",
-        "* In case you have any additional comments that don't fit in the previous bullets, please state them here. \n"
+        "* The visualization in this notebook will also be used in the final dashboard to meed **Business Requirement 1**.\n"
       ]
     },
     {
@@ -47,7 +53,7 @@
         "id": "cqP-UeN-z3i2"
       },
       "source": [
-        "# Change working directory"
+        "## Change working directory"
       ]
     },
     {
@@ -69,12 +75,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "wZfF_j-Bz3i4",
         "outputId": "66943449-1436-4c3d-85c7-b85f9f78349b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'d:\\\\Projects\\\\milestone-project-heritage-housing-issues\\\\jupyter_notebooks'"
+            ]
+          },
+          "execution_count": 1,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import os\n",
         "current_dir = os.getcwd()\n",
@@ -94,12 +111,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "TwHsQRWjz3i9",
         "outputId": "86849db3-cd2f-4cc5-ebb8-2d0caafa1a2c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "You set a new current directory\n"
+          ]
+        }
+      ],
       "source": [
         "os.chdir(os.path.dirname(current_dir))\n",
         "print(\"You set a new current directory\")"
@@ -116,12 +141,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "vz3S-_kjz3jA",
         "outputId": "00b79ae4-75d0-4a96-d193-ac9ef9847ea2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'d:\\\\Projects\\\\milestone-project-heritage-housing-issues'"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "current_dir = os.getcwd()\n",
         "current_dir"
@@ -133,22 +169,233 @@
         "id": "-mavJ8DibrcQ"
       },
       "source": [
-        "# Section 1"
+        "## Section 1: Load Data"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Section 1 content"
+        "We use Pandas library to load the cleaned dataset from `outputs/datasets/cleaned/house_prices_cleaned.csv` into DataFrames and display the first five rows of the dataset."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>1stFlrSF</th>\n",
+              "      <th>2ndFlrSF</th>\n",
+              "      <th>BedroomAbvGr</th>\n",
+              "      <th>BsmtExposure</th>\n",
+              "      <th>BsmtFinSF1</th>\n",
+              "      <th>BsmtFinType1</th>\n",
+              "      <th>BsmtUnfSF</th>\n",
+              "      <th>GarageArea</th>\n",
+              "      <th>GarageFinish</th>\n",
+              "      <th>GarageYrBlt</th>\n",
+              "      <th>...</th>\n",
+              "      <th>LotArea</th>\n",
+              "      <th>LotFrontage</th>\n",
+              "      <th>MasVnrArea</th>\n",
+              "      <th>OpenPorchSF</th>\n",
+              "      <th>OverallCond</th>\n",
+              "      <th>OverallQual</th>\n",
+              "      <th>TotalBsmtSF</th>\n",
+              "      <th>YearBuilt</th>\n",
+              "      <th>YearRemodAdd</th>\n",
+              "      <th>SalePrice</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>856</td>\n",
+              "      <td>854.0</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>No</td>\n",
+              "      <td>706</td>\n",
+              "      <td>GLQ</td>\n",
+              "      <td>150</td>\n",
+              "      <td>548</td>\n",
+              "      <td>RFn</td>\n",
+              "      <td>2003.0</td>\n",
+              "      <td>...</td>\n",
+              "      <td>8450</td>\n",
+              "      <td>65.0</td>\n",
+              "      <td>196.0</td>\n",
+              "      <td>61</td>\n",
+              "      <td>5</td>\n",
+              "      <td>7</td>\n",
+              "      <td>856</td>\n",
+              "      <td>2003</td>\n",
+              "      <td>2003</td>\n",
+              "      <td>208500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1262</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>Gd</td>\n",
+              "      <td>978</td>\n",
+              "      <td>ALQ</td>\n",
+              "      <td>284</td>\n",
+              "      <td>460</td>\n",
+              "      <td>RFn</td>\n",
+              "      <td>1976.0</td>\n",
+              "      <td>...</td>\n",
+              "      <td>9600</td>\n",
+              "      <td>80.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>8</td>\n",
+              "      <td>6</td>\n",
+              "      <td>1262</td>\n",
+              "      <td>1976</td>\n",
+              "      <td>1976</td>\n",
+              "      <td>181500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>920</td>\n",
+              "      <td>866.0</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>Mn</td>\n",
+              "      <td>486</td>\n",
+              "      <td>GLQ</td>\n",
+              "      <td>434</td>\n",
+              "      <td>608</td>\n",
+              "      <td>RFn</td>\n",
+              "      <td>2001.0</td>\n",
+              "      <td>...</td>\n",
+              "      <td>11250</td>\n",
+              "      <td>68.0</td>\n",
+              "      <td>162.0</td>\n",
+              "      <td>42</td>\n",
+              "      <td>5</td>\n",
+              "      <td>7</td>\n",
+              "      <td>920</td>\n",
+              "      <td>2001</td>\n",
+              "      <td>2002</td>\n",
+              "      <td>223500</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>961</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>No</td>\n",
+              "      <td>216</td>\n",
+              "      <td>ALQ</td>\n",
+              "      <td>540</td>\n",
+              "      <td>642</td>\n",
+              "      <td>Unf</td>\n",
+              "      <td>1998.0</td>\n",
+              "      <td>...</td>\n",
+              "      <td>9550</td>\n",
+              "      <td>60.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>35</td>\n",
+              "      <td>5</td>\n",
+              "      <td>7</td>\n",
+              "      <td>756</td>\n",
+              "      <td>1915</td>\n",
+              "      <td>1970</td>\n",
+              "      <td>140000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1145</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>Av</td>\n",
+              "      <td>655</td>\n",
+              "      <td>GLQ</td>\n",
+              "      <td>490</td>\n",
+              "      <td>836</td>\n",
+              "      <td>RFn</td>\n",
+              "      <td>2000.0</td>\n",
+              "      <td>...</td>\n",
+              "      <td>14260</td>\n",
+              "      <td>84.0</td>\n",
+              "      <td>350.0</td>\n",
+              "      <td>84</td>\n",
+              "      <td>5</td>\n",
+              "      <td>8</td>\n",
+              "      <td>1145</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>2000</td>\n",
+              "      <td>250000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>5 rows × 22 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   1stFlrSF  2ndFlrSF  BedroomAbvGr BsmtExposure  BsmtFinSF1 BsmtFinType1  \\\n",
+              "0       856     854.0           3.0           No         706          GLQ   \n",
+              "1      1262       0.0           3.0           Gd         978          ALQ   \n",
+              "2       920     866.0           3.0           Mn         486          GLQ   \n",
+              "3       961       0.0           3.0           No         216          ALQ   \n",
+              "4      1145       0.0           4.0           Av         655          GLQ   \n",
+              "\n",
+              "   BsmtUnfSF  GarageArea GarageFinish  GarageYrBlt  ...  LotArea LotFrontage  \\\n",
+              "0        150         548          RFn       2003.0  ...     8450        65.0   \n",
+              "1        284         460          RFn       1976.0  ...     9600        80.0   \n",
+              "2        434         608          RFn       2001.0  ...    11250        68.0   \n",
+              "3        540         642          Unf       1998.0  ...     9550        60.0   \n",
+              "4        490         836          RFn       2000.0  ...    14260        84.0   \n",
+              "\n",
+              "   MasVnrArea  OpenPorchSF  OverallCond  OverallQual  TotalBsmtSF  YearBuilt  \\\n",
+              "0       196.0           61            5            7          856       2003   \n",
+              "1         0.0            0            8            6         1262       1976   \n",
+              "2       162.0           42            5            7          920       2001   \n",
+              "3         0.0           35            5            7          756       1915   \n",
+              "4       350.0           84            5            8         1145       2000   \n",
+              "\n",
+              "   YearRemodAdd  SalePrice  \n",
+              "0          2003     208500  \n",
+              "1          1976     181500  \n",
+              "2          2002     223500  \n",
+              "3          1970     140000  \n",
+              "4          2000     250000  \n",
+              "\n",
+              "[5 rows x 22 columns]"
+            ]
+          },
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "df_cleaned = pd.read_csv(\"outputs/datasets/cleaned/house_prices_cleaned.csv\")\n",
+        "df.head(5)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -165,14 +412,14 @@
         "id": "uFQo3ycuO-v6"
       },
       "source": [
-        "# Section 2"
+        "## Section 2: Data Exploration"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Section 2 content"
+        "We create a data profiling report for exploratory data analysis (EDA) of the DataFrame `df_cleaned`."
       ]
     },
     {
@@ -217,14 +464,19 @@
         "id": "ltNetd085qHf"
       },
       "source": [
-        "# Push files to Repo"
+        "## Conclusions and Next Steps"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "* If you do not need to push files to Repo, you may replace this section with \"Conclusions and Next Steps\" and state your conclusions and next steps."
+        "### Conclusions\n",
+        "We successfully completed the data collection and initial exploration process, providing a clear understanding of the dataset's structure and potential challenges. Key findings include:\n",
+        "1. \n",
+        "\n",
+        "### Next steps: Data Cleaning\n",
+        "1. "
       ]
     },
     {
@@ -252,11 +504,9 @@
       "provenance": [],
       "toc_visible": true
     },
-    "interpreter": {
-      "hash": "8b8334dab9339717f727a1deaf837b322d7a41c20d15cc86be99a8e69ceec8ce"
-    },
     "kernelspec": {
-      "display_name": "Python 3.8.12 64-bit ('3.8.12': pyenv)",
+      "display_name": ".venv",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
@@ -269,7 +519,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.12"
+      "version": "3.12.6"
     },
     "orig_nbformat": 2
   },
