--- a/jupyter_notebooks/04-FeatureEngineering.ipynb
+++ b/jupyter_notebooks/04-FeatureEngineering.ipynb
@@ -19152,7 +19152,7 @@
       "toc_visible": true
     },
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": ".venv (3.12.6)",
       "language": "python",
       "name": "python3"
     },
