chores: Fixed misspellings, typos and uniformity.

--- a/jupyter_notebooks/01-DataCollection.ipynb
+++ b/jupyter_notebooks/01-DataCollection.ipynb
@@ -28,7 +28,7 @@
         "\n",
         "## Outputs\n",
         "\n",
-        "* Raw dataset saved as `inputs/datasets/raw/house_price_records.csv`."
+        "* Raw dataset saved as `inputs/datasets/raw/house_prices_records.csv`."
       ]
     },
     {
@@ -317,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -531,10 +531,10 @@
         "# Import Pandas for data manipulation\n",
         "import pandas as pd\n",
         "\n",
-        "# Create DataFrame of raw dataset containing house price records\n",
+        "# Create DataFrame containing house price records\n",
         "df_prices = pd.read_csv(\"inputs/datasets/raw/house_prices_records.csv\")\n",
         "\n",
-        "# Create DataFrame of dataset containing inherited house information\n",
+        "# Create DataFrame containing inherited house information\n",
         "df_inherited = pd.read_csv(\"inputs/datasets/raw/inherited_houses.csv\")\n",
         "\n",
         "# Display the first few rows of the df_prices dataset for initial inspection\n",
@@ -725,23 +725,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Conclusions\n",
-        "- The dataset contains **1460 rows** and **24 columns**.\n",
-        "- Key columns with missing values include:\n",
-        "  - `LotFrontage` (17.7% missing values).\n",
-        "  - `GarageFinish` (16.1% missing values).\n",
-        "- Initial exploration highlighted potential challenges such as:\n",
-        "  - Missing values in key columns.\n",
-        "  - Outliers in numeric columns.\n",
-        "\n",
-        "### Next Steps: Data Cleaning\n",
-        "1. **Handle missing values**:\n",
-        "   - Impute numeric columns like `LotFrontage` with the median.\n",
-        "   - Fill categorical columns like `GarageFinish` with logical values such as `'None'`.\n",
-        "2. **Drop irrelevant columns**:\n",
-        "   - Remove columns with high percentages of missing data or low relevance.\n",
-        "3. **Explore outliers**:\n",
-        "   - Investigate potential outliers in numeric columns to ensure data quality."
+        "## Conclusions and Next Steps"
       ]
     }
   ],
