--- a/jupyter_notebooks/02-DataCleaning.ipynb
+++ b/jupyter_notebooks/02-DataCleaning.ipynb
@@ -152,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -373,10 +373,10 @@
         "# Import Pandas for data manipulation\n",
         "import pandas as pd\n",
         "\n",
-        "# Create DataFrame of raw dataset containing house prices\n",
+        "# Create DataFrame containing house price data\n",
         "df_prices = pd.read_csv(\"inputs/datasets/raw/house_prices_records.csv\")\n",
         "\n",
-        "# Display the amount of rows/columns and first few rows of the dataset\n",
+        "# Display the number of rows/columns and first few rows of the dataset\n",
         "print(\"Shape of the dataset:\", df_prices.shape)\n",
         "df_prices.head(5)"
       ]
@@ -7597,7 +7597,7 @@
         "id": "ltNetd085qHf"
       },
       "source": [
-        "## Conclusion and Next Steps"
+        "## Conclusions and Next Steps"
       ]
     },
     {
