--- a/jupyter_notebooks/03-CorrelationStudy.ipynb
+++ b/jupyter_notebooks/03-CorrelationStudy.ipynb
@@ -26,7 +26,7 @@
         "\n",
         "## Inputs\n",
         "* Cleaned dataset: `outputs/datasets/cleaned/house_prices_cleaned.parquet`.\n",
-        "* Hypotheses documented in [Hypotheses and Validation Process in README.md](LÄGG IN LÄNK!).\n",
+        "* Hypotheses documented in the project [README.md](#) file.\n",
         "\n",
         "\n",
         "## Outputs\n",
@@ -143,7 +143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -357,7 +357,7 @@
         "# Import Pandas for data manipulation\n",
         "import pandas as pd\n",
         "\n",
-        "# Create DataFrame of cleaned dataset of house prices\n",
+        "# Create DataFrame containing cleaned house price dataset\n",
         "df = pd.read_parquet(\"outputs/datasets/cleaned/house_prices_cleaned.parquet\")\n",
         "\n",
         "# Display DataFrames first five rows\n",
@@ -17077,7 +17077,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -17311,7 +17311,7 @@
         "# Fit and transform the data\n",
         "df_ohe = encoder.fit_transform(df)\n",
         "\n",
-        "# Display the amount of rows/columns and first five rows of the transformed DataFrame\n",
+        "# Display the number of rows/columns and first five rows of the transformed DataFrame\n",
         "print(df_ohe.shape)\n",
         "df_ohe.head(5)"
       ]
