--- a/jupyter_notebooks/05-ModelTraining.ipynb
+++ b/jupyter_notebooks/05-ModelTraining.ipynb
@@ -157,7 +157,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -381,10 +381,10 @@
         "# Import Pandas for data manipulation\n",
         "import pandas as pd\n",
         "\n",
-        "# Create DataFrame of cleaned dataset of house prices\n",
+        "# Create DataFrame containing cleaned house price dataset\n",
         "df = pd.read_parquet(\"outputs/datasets/cleaned/house_prices_cleaned.parquet\")\n",
         "\n",
-        "# Display the amount of rows/columns and first five rows of the DataFrame\n",
+        "# Display the number of rows/columns and first five rows of the DataFrame\n",
         "print(df.shape)\n",
         "df.head(5)"
       ]
@@ -696,7 +696,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 130,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -723,7 +723,7 @@
         "print(\"Columns in X_train:\", X_train.columns.tolist())\n",
         "print(\"Columns in X_test:\", X_test.columns.tolist())\n",
         "\n",
-        "# Display the amount of rows/columns for training and testing sets\n",
+        "# Display the number of rows/columns for training and testing sets\n",
         "print(f\"*** Training Set: {X_train.shape}, {y_train.shape}\")\n",
         "print(f\"*** Test Set: {X_test.shape}, {y_test.shape}\")"
       ]
@@ -2369,29 +2369,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 162,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def CreatePipeline(model):\n",
-        "    if model is None:\n",
-        "        raise ValueError(\"Model cannot be None. Please provide a valid model.\")\n",
-        "    \n",
-        "    pipeline_base = Pipeline([\n",
-        "        # 1. Impute missing values for categorical variables\n",
-        "        ('categorical_imputer', CategoricalImputer(imputation_method='missing',\n",
-        "                                                   variables=['KitchenQual'])),\n",
-        "        # 2. Encode categorical variables\n",
-        "        ('ordinal_encoder', OrdinalEncoder(encoding_method='arbitrary',\n",
-        "                                           variables=['KitchenQual'])),\n",
-        "        # 3. Scale numerical features\n",
-        "        ('scale_features', StandardScaler()),\n",
-        "        \n",
-        "        # 4. Train the model\n",
-        "        ('model', model)\n",
-        "    ])\n",
-        "    \n",
-        "    return pipeline_base"
+        "# Display final pipeline preprocessing and modeling steps.\n",
+        "pipeline_dc_fe.named_steps"
       ]
     },
     {
@@ -3524,36 +3507,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### Conclusions\n",
-        "* The model achieved the following performance:\n",
-        "  - **R² Score (Train Set)**: 0.81\n",
-        "  - **R² Score (Test Set)**: 0.79\n",
-        "  - **Mean Absolute Error (Test Set)**: 1800.0\n",
-        "  - **Root Mean Squared Error (Test Set)**: 1788.9\n",
-        "* The feature importance analysis revealed that list top features are the most influential factors in predicting house prices.\n",
-        "\n",
-        "### Bias-variance Analysis\n",
-        "* The bias-variance analysis indicates that the model has a good balance between bias and variance:\n",
-        "  * The difference between the Train R² and Test R² is small, suggesting that the model generalizes well to unseen data.\n",
-        "  * There is no significant overfitting or underfitting, which ensures that the model is robust and reliable for predicting house prices.\n",
-        "\n",
-        "### Pipeline Summary\n",
-        "The final optimized pipeline includes the following steps:\n",
-        "1. **Mean Imputation**: Handles missing values in numerical features.\n",
-        "2. **Log Transformation**: Reduces skewness in features like `GrLivArea`.\n",
-        "3. **Power Transformation**: Normalizes features like `TotalBsmtSF`.\n",
-        "4. **Winsorization**: Caps extreme values in features like `GarageArea`.\n",
-        "5. **Feature Scaling**: Standardizes numerical features.\n",
-        "6. **Model Training**: Trains an `ExtraTreesRegressor` with optimized hyperparameters.\n",
-        "\n",
-        "This pipeline ensures robust preprocessing and high model performance, addressing **Business Requirement 2**.\n",
-        "\n",
-        "### Next Steps: Deployment\n",
-        "1. **Create Dashboard** based on dashboard requirements.\n",
-        "2. **Deploy the Model and Pipeline** using Streamlit.\n",
-        "3. **Future Improvements**:\n",
-        "    * Collect more data, test additional algorithms, or refine feature engineering to further enhance model performance.\n",
-        "    * Gather user feedback after deployment to identify areas for improvement and ensure the model meets business needs."
+        "## Conclusions and Next Steps"
       ]
     }
   ],
