Chore: Refined pages and tested notebooks.

--- a/jupyter_notebooks/01-DataCollection.ipynb
+++ b/jupyter_notebooks/01-DataCollection.ipynb
@@ -56,16 +56,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 60,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "'d:\\\\'"
+              "'d:\\\\Projects'"
             ]
           },
-          "execution_count": 33,
+          "execution_count": 60,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 61,
       "metadata": {},
       "outputs": [
         {
@@ -96,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 62,
       "metadata": {},
       "outputs": [
         {
@@ -105,7 +105,7 @@
               "'d:\\\\'"
             ]
           },
-          "execution_count": 35,
+          "execution_count": 62,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -144,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 64,
       "metadata": {},
       "outputs": [
         {
@@ -187,7 +187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 65,
       "metadata": {},
       "outputs": [
         {
@@ -218,7 +218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 66,
       "metadata": {},
       "outputs": [
         {
@@ -264,7 +264,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 67,
       "metadata": {},
       "outputs": [
         {
@@ -317,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 68,
       "metadata": {},
       "outputs": [
         {
@@ -522,7 +522,7 @@
               "[5 rows x 24 columns]"
             ]
           },
-          "execution_count": 41,
+          "execution_count": 68,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -556,7 +556,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 69,
       "metadata": {},
       "outputs": [
         {
@@ -606,7 +606,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": 70,
       "metadata": {},
       "outputs": [
         {
@@ -664,7 +664,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 71,
       "metadata": {},
       "outputs": [
         {
@@ -697,7 +697,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 44,
+          "execution_count": 71,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -725,7 +725,23 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Conclusions and Next Steps"
+        "### Conclusions\n",
+        "1. **Successful Data Retrieval**:\n",
+        "    * The Kaggle API was successfully installed, configured, and authenticated using the kaggle.json token.\n",
+        "    * The raw dataset, house_prices_records.csv, was downloaded, unzipped, and saved in the inputs/datasets/raw/ directory.\n",
+        "\n",
+        "2. **Initial Data Inspection**:\n",
+        "    * The dataset was loaded into a Pandas DataFrame (df_prices) and inspected for structure, data types, and summary statistics.\n",
+        "    * Missing values were identified, which will need to be addressed in subsequent steps.\n",
+        "    * The dataset appears to be correctly formatted and ready for further processing.\n",
+        "3. **Project Setup**:\n",
+        "    * The working directory was successfully set to the project root, ensuring consistent file paths for all operations.\n",
+        "\n",
+        "\n",
+        "### Next Steps: Data Cleaning\n",
+        "1. Address missing values in the dataset by either imputing or removing them, depending on their significance.\n",
+        "2. Standardize column names and ensure consistency in data formatting.\n",
+        "3. Exploratory Data Analysis (EDA)"
       ]
     }
   ],
