Chore: Added inline comments + tested all notebooks.

--- a/jupyter_notebooks/01-DataCollection.ipynb
+++ b/jupyter_notebooks/01-DataCollection.ipynb
@@ -44,7 +44,25 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Change Working Directory"
+        "## 1. Import required libraries"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Standard libraries\n",
+        "import os  # Handles file and directory operations, such as changing the working directory or creating folders\n",
+        "import pandas as pd  # Used for reading, manipulating, and analyzing data in tabular format (DataFrames)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## 2. Change Working Directory"
       ]
     },
     {
@@ -56,29 +74,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "'d:\\\\Projects'"
+              "'d:\\\\Projects\\\\milestone-project-heritage-housing-issues'"
             ]
           },
-          "execution_count": 60,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "import os\n",
         "current_dir = os.getcwd()\n",
         "current_dir"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -96,16 +113,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "'d:\\\\'"
+              "'d:\\\\Projects'"
             ]
           },
-          "execution_count": 62,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -128,14 +145,14 @@
         "id": "-mavJ8DibrcQ"
       },
       "source": [
-        "## 1. Data Retrieval"
+        "## 3. Data Retrieval"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### 1.1 Install Kaggle API\n",
+        "### 3.1 Install Kaggle API\n",
         "The Kaggle API is required to download datasets directly from Kaggle. In this step, we will:\n",
         "1. Install the Kaggle API package.\n",
         "2. Configure the Kaggle API token for authentication.\n",
@@ -144,7 +161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -172,6 +189,8 @@
         }
       ],
       "source": [
+        "# Install the Kaggle API package\n",
+        "# This package allows us to download datasets directly from Kaggle.\n",
         "%pip install kaggle"
       ]
     },
@@ -179,7 +198,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### 1.2 Configure Kaggle API\n",
+        "### 3.2 Configure Kaggle API\n",
         "To authenticate with the Kaggle API, we need to:\n",
         "1. Set the environment variable `KAGGLE_CONFIG_DIR` to the directory containing the `kaggle.json` file.\n",
         "2. Restrict access to the `kaggle.json` file to ensure it is secure."
@@ -187,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
@@ -200,11 +219,12 @@
         }
       ],
       "source": [
-        "# Configure the Kaggle API\n",
-        "import os\n",
+        "# Configure the Kaggle API for authentication\n",
+        "# Set the environment variable to the directory containing the kaggle.json file.\n",
         "os.environ['KAGGLE_CONFIG_DIR'] = os.getcwd()\n",
         "\n",
-        "# Restrict access to the Kaggle API token for security\n",
+        "# Restrict access to the kaggle.json file\n",
+        "# This ensures that the API token is secure and cannot be accessed by unauthorized users.\n",
         "! chmod 600 kaggle.json"
       ]
     },
@@ -212,13 +232,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### 1.3 Download Dataset\n",
+        "### 3.3 Download Dataset\n",
         "Using the Kaggle API, we will download the raw dataset and save it in the `inputs/datasets/raw/` folder."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -244,10 +264,13 @@
       ],
       "source": [
         "# Define the Kaggle dataset path and destination folder\n",
+        "# KaggleDatasetPath: The unique identifier for the dataset on Kaggle.\n",
+        "# DestinationFolder: The folder where the dataset will be saved.\n",
         "KaggleDatasetPath = \"codeinstitute/housing-prices-data\"\n",
         "DestinationFolder = \"inputs/datasets/raw\"\n",
         "\n",
-        "# Download the dataset\n",
+        "# Download the dataset using the Kaggle API\n",
+        "# The dataset will be saved in the specified destination folder.\n",
         "! kaggle datasets download -d {KaggleDatasetPath} -p {DestinationFolder}"
       ]
     },
@@ -255,7 +278,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### 1.4 Unzip and Organize Dataset\n",
+        "### 3.4 Unzip and Organize Dataset\n",
         "After downloading the dataset, we will:\n",
         "1. Unzip the dataset.\n",
         "2. Remove unnecessary files and folders.\n",
@@ -264,22 +287,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "'unzip' is not recognized as an internal or external command,\n",
-            "operable program or batch file.\n"
+          "ename": "IndentationError",
+          "evalue": "unexpected indent (2487385711.py, line 4)",
+          "output_type": "error",
+          "traceback": [
+            "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31m&& rm kaggle.json # Remove the Kaggle API token for security\u001b[39m\n    ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m unexpected indent\n"
           ]
         }
       ],
       "source": [
+        "# Unzip the downloaded dataset\n",
+        "# The dataset is extracted to the destination folder, and the zip file is removed to save space.\n",
         "! unzip {DestinationFolder}/*.zip -d {DestinationFolder} \\\n",
-        "  && rm {DestinationFolder}/*.zip \\\n",
-        "  && rm kaggle.json"
+        "  && rm {DestinationFolder}/*.zip \\ \n",
+        "  && rm kaggle.json # Remove the Kaggle API token for security"
       ]
     },
     {
@@ -297,7 +322,7 @@
         "id": "uFQo3ycuO-v6"
       },
       "source": [
-        "## 2. Load and Inspect Kaggle Data"
+        "## 4. Load and Inspect Kaggle Data"
       ]
     },
     {
@@ -312,12 +337,12 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### 2.1 Load the dataset"
+        "### 4.1 Load the dataset"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -522,22 +547,22 @@
               "[5 rows x 24 columns]"
             ]
           },
-          "execution_count": 68,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# Import Pandas for data manipulation\n",
-        "import pandas as pd\n",
-        "\n",
-        "# Create DataFrame containing house price records\n",
+        "# Load the house prices dataset into a DataFrame\n",
+        "# This dataset contains information about house sales in Ames, Iowa.\n",
         "df_prices = pd.read_csv(\"inputs/datasets/raw/house_prices_records.csv\")\n",
         "\n",
-        "# Create DataFrame containing inherited house information\n",
+        "# Load the inherited houses dataset into a DataFrame\n",
+        "# This dataset contains information about inherited houses.\n",
         "df_inherited = pd.read_csv(\"inputs/datasets/raw/inherited_houses.csv\")\n",
         "\n",
-        "# Display the first few rows of the df_prices dataset for initial inspection\n",
+        "# Display the first few rows of the house prices dataset\n",
+        "# This provides an initial look at the data structure and content.\n",
         "df_prices.head()"
       ]
     },
@@ -545,7 +570,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### 2.2 Inspect the structure and summary statistics.\n",
+        "### 4.2 Inspect the structure and summary statistics.\n",
         "In this step, we will inspect the `df_prices` dataset to:\n",
         "* Understand its structure and data types.\n",
         "* Identify any missing values.\n",
@@ -556,7 +581,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
@@ -599,14 +624,15 @@
         }
       ],
       "source": [
-        "# Inspect dataset\n",
+        "# Inspect the structure of the dataset\n",
+        "# This provides information about the number of rows, columns, data types, and memory usage.\n",
         "print(\"Dataset info:\")\n",
         "df_prices.info()"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [
         {
@@ -658,13 +684,14 @@
       ],
       "source": [
         "# Generate a statistical summary of the numeric columns\n",
+        "# This includes metrics like mean, standard deviation, min, and max values.\n",
         "print(\"Statistical Summary of df_prices:\")\n",
         "print(df_prices.describe())"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [
         {
@@ -697,13 +724,14 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 71,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# Check for missing values\n",
+        "# Check for missing values in the dataset\n",
+        "# This helps identify columns that may require imputation or removal.\n",
         "df_prices.isnull().sum()"
       ]
     },
