Feat: Updated pages with custom Streamlit theme

--- a/jupyter_notebooks/03-CorrelationStudy.ipynb
+++ b/jupyter_notebooks/03-CorrelationStudy.ipynb
@@ -18078,7 +18078,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "### 6.2 Visualization of Target Variable Distrubition\n",
+        "### 6.2 Visualization of Target Variable Distribution\n",
         "\n",
         "We need to understand the distribution of the target variable (`SalePrice`) and identify whether it is skewed or contains outliers. This is important because skewness or outliers can affect the performance of predictive models.\n",
         "\n",
@@ -18552,6 +18552,11 @@
         "4. **Scale Data**: Standardize or normalize numerical variables to ensure consistent scaling across features for machine learning models.\n",
         "5. **Incorporate Insights**: Leverage the findings from the correlation analysis to prioritize and engineer features that are most predictive of `SalePrice`."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
